--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
     <title>RpH Store</title>
@@ -14,7 +15,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="./images/logo.png" alt="" class="logo">
+            <img src="./images/logo2.png" alt="" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="https://www.instagram.com/_rphstore/">Contact</a></li>
