--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section class="about" id="about">
         <div class="contentabout">
-            <img src="images/about.png" alt="">
+            <img src="images/about2.png" alt="">
             <div class="text">
                 <h1>Sobre Nós</h1>
                 <h5>RpH Clothing</h5>
