--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h5>RpH Clothing</h5>
                 <p>Uma marca que veio para quebrar padrões. A RpH foi criada em dezembro de 2023 para ser uma das maiores no segmento de camisetas Oversized's/Streetwear
                     com uma modelagem exclusiva nas peças, prezamos pelo conforto e qualidade sempre. Com estampas únicas e exclusivas, juntando 
-                    personagens "cartonescos", com o estilo de estampa Street. Espero que goste, e caso queira garantir a sua nos mande uma mensagem!
+                    personagens "cartonescos", com o estilo de estampa Street. Espero que goste e, caso queira garantir a sua, nos mande uma mensagem!
                 </p>
                     <button class="aboutbtn" type="button"><a href="https://www.instagram.com/_rphstore/"><font color="#fff">Saiba Mais</font></a></button>
             </div>
